# friend_reader

./: .gitignore  Cargo.toml  LICENSE  README.md
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml  README.md
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
