[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
eframe = "0.30"
egui = "0.30"
epaint = "0.30"
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
sha2 = "0.10.9"
hex = "0.4.3"
